--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Cooking Masters</title>
@@ -22,23 +24,24 @@
                 <div>
                     <h3>Recipe of the Week</h3>
                     <div id="recipe-week">
-        <a href="fish-tacos.html" class="large recipe">
-            <img src="images/original/fish-tacos-with-pickled-onion.png">
-            <h4>Fish Tacos with Pickled Onion</h4>
-            <p class="metadata">Main Meal | 13 ingredients | 60 min</p>
-        </a>
-    </div>
+                        <a href="fish-tacos.html" class="large recipe">
+                            <img src="images/original/fish-tacos-with-pickled-onion.png"
+                                style="view-transition-name: fish-tacos;">
+                            <h4>Fish Tacos with Pickled Onion</h4>
+                            <p class=" metadata">Main Meal | 13 ingredients | 60 min</p>
+                        </a>
+                    </div>
 
                 </div>
                 <div>
                     <h3>Most Cooked</h3>
                     <div id="recipe-most">
-        <a href="vegetarian-pho.html" class="large recipe">
-            <img src="images/original/vegetarian-pho.png">
-            <h4>Vegetarian Pho</h4>
-            <p class="metadata">Main Meal | 22 ingredients | 90 min</p>
-        </a>
-    </div>
+                        <a href="vegetarian-pho.html" class="large recipe">
+                            <img src="images/original/vegetarian-pho.png" style="view-transition-name: pho;">
+                            <h4>Vegetarian Pho</h4>
+                            <p class="metadata">Main Meal | 22 ingredients | 90 min</p>
+                        </a>
+                    </div>
 
                 </div>
             </section>
@@ -46,34 +49,40 @@
 
             <section id="all">
                 <h3>All Recipes</h3>
-                <ul><li>
-        <a href="asado.html" class="small recipe">
-            <img src="images/original/asado.png">
-            <h4>Argentinian Asado</h4>
-            <p class="metadata">Main Meal | 8 ingredients | 240 min</p>
-        </a>
-    </li><li>
-        <a href="southwest-nachos.html" class="small recipe">
-            <img src="images/original/southwest-nachos.png">
-            <h4>Southwest Nachos</h4>
-            <p class="metadata">Appetizer | 12 ingredients | 30 min</p>
-        </a>
-    </li><li>
-        <a href="calamari.html" class="small recipe">
-            <img src="images/original/calamari-and-shrimp-pasta.png">
-            <h4>Calamari and Shrimp Pasta</h4>
-            <p class="metadata">Main Meal | 12 ingredients | 45 min</p>
-        </a>
-    </li><li>
-        <a href="ddl-brownies.html" class="small recipe">
-            <img src="images/original/ddl-brownies.png">
-            <h4>Dulce de Leche Brownies</h4>
-            <p class="metadata">Dessert | 9 ingredients | 60 min</p>
-        </a>
-    </li></ul>
+                <ul>
+                    <li>
+                        <a href="asado.html" class="small recipe">
+                            <img src="images/original/asado.png" style="view-transition-name: asado;">
+                            <h4>Argentinian Asado</h4>
+                            <p class="metadata">Main Meal | 8 ingredients | 240 min</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="southwest-nachos.html" class="small recipe">
+                            <img src="images/original/southwest-nachos.png" style="view-transition-name: nachos;">
+                            <h4>Southwest Nachos</h4>
+                            <p class="metadata">Appetizer | 12 ingredients | 30 min</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="calamari.html" class="small recipe">
+                            <img src="images/original/calamari-and-shrimp-pasta.png"
+                                style="view-transition-name: calamari;">
+                            <h4>Calamari and Shrimp Pasta</h4>
+                            <p class="metadata">Main Meal | 12 ingredients | 45 min</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="ddl-brownies.html" class="small recipe">
+                            <img src="images/original/ddl-brownies.png" style="view-transition-name: brownies;">
+                            <h4>Dulce de Leche Brownies</h4>
+                            <p class="metadata">Dessert | 9 ingredients | 60 min</p>
+                        </a>
+                    </li>
+                </ul>
             </section>
         </section>
-               
+
     </main>
 
     <footer>
@@ -85,4 +94,6 @@
     </footer>
 
 
-</body></html>
+</body>
+
+</html>
