add speculation rules to prerender the recipe of the week and most cooked recipe for performance

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="manifest" href="app.webmanifest">
     <link rel="apple-touch-icon" href="/images/icon-permissions.svg">
     <link rel="icon" href="images/icon-permissions.svg">
+    <script type="speculationrules">
+        {
+            "prerender": [
+                {"urls": [ "vegetarian-pho.html", "fish-tacos.html" ] }
+            ]
+        }
+    </script>
 </head>
 
 <body>
